Fix overflow on todo-list

--- a/Frontend/reminders/src/main.css
+++ b/Frontend/reminders/src/main.css
@@ -1026,7 +1026,7 @@ body.noscroll {
 .todo-list {
     position: relative;
     z-index: 1000;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .normal .todo-list {
